added property file for sinhalese

--- a/app/view/global-translations/locale-en.properties
+++ b/app/view/global-translations/locale-en.properties
@@ -44,8 +44,8 @@ button_Reset=Reset
 radiobutton_freehand=Free Hand
 radiobutton_square=Square
 checkbox_enablecropping=Enable Cropping
-checkbox_showcolourregions.selectedarea=Show Colour Regions [Selected Area]
-checkbox_showcolourregions.allarea=Show Colour Regions [All Area]
+checkbox_showcolourregions_selectedarea=Show Colour Regions [Selected Area]
+checkbox_showcolourregions_allarea=Show Colour Regions [All Area]
   
   
 #Misc Labels
