added german translation property

--- a/app/view/global-translations/locale-en.properties
+++ b/app/view/global-translations/locale-en.properties
@@ -1,5 +1,6 @@
 #Common
 menu_translate_english=English
+menu_translate_german=Deutsche
 menu_translate_sinhala=සිංහල
 menu_translate_tamil=தமிழ்
   
