modified property files

--- a/app/view/global-translations/locale-en.properties
+++ b/app/view/global-translations/locale-en.properties
@@ -15,6 +15,7 @@ heading_loadapattern=Load a Pattern
 #Menu Links
 menu_file=File
 menu_file_openproject=Open Project
+menu_file_savepattern=Save Pattern
 menu_file_saveproject=Save Project
 menu_file_importpattern=Import Pattern
 menu_edit=Edit
@@ -29,12 +30,13 @@ menu_translate=Translate
 #Inputs
 input_port=Port
 input_machine=Machine: 
-input_columns=Columns: 
-input_rows=Rows: 
+input_columns=columns: 
+input_rows=rows: 
   
   
 #Buttons
 button_knit=Knit
+button_proceed_knit=Proceed Knit
 button_configure=Configure
 button_choosefile=Choose File
 button_addyarncolour=Add Yarn Colour
