--- a/app/view/global-translations/locale-ge.properties
+++ b/app/view/global-translations/locale-ge.properties
@@ -35,6 +35,7 @@ input_rows=Zeilen:
   
 #Buttons
 button_knit=Strick
+button_proceed_knit=Gehen Sie stricken
 button_configure=konfigurieren
 button_choosefile=Datei wählen
 button_addyarncolour=In Garn Farbe
