--- a/app/view/global-translations/locale-si.properties
+++ b/app/view/global-translations/locale-si.properties
@@ -20,7 +20,7 @@ menu_file_importpattern=මෝස්තරයක් ගෙන්වීම
 menu_edit=සංස්කරණය කරන්න
 menu_help=උදවු
 menu_help_aboutsoftware=මෘදුකාංගය ගැන
-menu_translate=Translate=පරිවර්තනය
+menu_translate=පරිවර්තනය
   
   
 #Anchors
@@ -35,6 +35,7 @@ input_rows=තිරස් පේළිය:
   
 #Buttons
 button_knit=ගොතන්න
+button_proceed_knit=ගෙතීම ක්‍රියාත්මක කරන්න
 button_configure=හැඩගැස්වන්න
 button_choosefile=ලිපි ගොනුව තෝරන්න
 button_addyarncolour=නූල් සඳහා වර්ණ එකතු කරන්න
